--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Your awesome title
-email: your-email@domain.com
+email: ali.karaki@smbs.com
+address: 19, Rue Robert Brun
+showroom: Rue 6 Felix Éboué
+telephone: +221 33 822 15 11
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
